--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -15,53 +15,55 @@
       vertical-align: top;
   }
   .mail-box .sm-side {
-      background: none repeat scroll 0 0 #e5e8ef;
-      border-radius: 4px 0 0 4px;
-      width: 25%;
+     /* background: none repeat scroll 0 0 #e5e8ef;*/
+    background: none repeat scroll 0 0 rgba(56, 5, 3, 0.87);
+    border-radius: 4px 0 0 4px;
+    width: 25%;
+    color: white;
   }
   .mail-box .lg-side {
-      background: none repeat scroll 0 0 #fff;
-      border-radius: 0 4px 4px 0;
-      width: 75%;
+   /* background: none repeat scroll 0 0 #fff;*/
+    border-radius: 0 4px 4px 0;
+    width: 75%;
   }
   .mail-box .sm-side .user-head {
-      background: none repeat scroll 0 0 #4c0217;
-      border-radius: 4px 0 0;
-      color: #fff;
-      min-height: 35px;
-      padding: 10px;
+    background: none repeat scroll 0 0 #4c0217;
+    border-radius: 4px 0 0;
+    color: #fff;
+    min-height: 35px;
+    padding: 10px;
   }
   .user-head .inbox-avatar {
-      float: left;
-      width: 65px;
+    float: left;
+    width: 65px;
   }
   .user-head .inbox-avatar img {
       border-radius: 4px;
   }
   .user-head .user-name {
-      display: inline-block;
-      margin: 0 0 0 10px;
+    display: inline-block;
+    margin: 0 0 0 10px;
   }
   .user-head .user-name h5 {
-      font-size: 14px;
-      font-weight: 300;
-      margin-bottom: 0;
-      margin-top: 15px;
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 0;
+    margin-top: 15px;
   }
   .user-head .user-name h5 a {
-      color: #fff;
+    color: #fff;
   }
   .user-head .user-name span a {
-      color: #87e2e7;
-      font-size: 12px;
+    color: #87e2e7;
+    font-size: 12px;
   }
   a.mail-dropdown {
-      background: none repeat scroll 0 0 #80d3d9;
-      border-radius: 2px;
-      color: #01a7b3;
-      font-size: 10px;
-      margin-top: 20px;
-      padding: 3px 5px;
+    background: none repeat scroll 0 0 #80d3d9;
+    border-radius: 2px;
+    color: #01a7b3;
+    font-size: 10px;
+    margin-top: 20px;
+    padding: 3px 5px;
   }
   .inbox-body {
       padding: 20px;
@@ -142,7 +144,8 @@
       padding: 0 22px;
   }
   .inbox-head {   
-      background: none repeat scroll 0 0 #00a8b3;      
+    /*  background: none repeat scroll 0 0 #00a8b3;   */
+      background: none repeat scroll 0 0 rgba(56, 5, 3, 0.87);
       border-radius: 0 4px 0 0;
       color: #fff;
       min-height: 30px;
@@ -153,6 +156,7 @@
       font-weight: 300;
       margin: 0;
       padding-top: 6px;
+      color: white;
   }
   .inbox-head .sr-input {
       border: medium none;
