--- a/app/views/home/gallary.html.erb
+++ b/app/views/home/gallary.html.erb
@@ -1,12 +1,34 @@
-<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <div class="row">
-		<div class="col-md-4">		    
-				<h1>throughout</h1>	
-		</div>
-		<div class="col-md-4">		    
-				<h1>throughout</h1> 		
-		</div>
-		<div class="col-md-4">		    
-				<h1>throughout</h1> 	
-		</div>	
-	</div> -->
+<div class="container-fluid">  
+	<div class="row">
+			<div class="tabbable">
+      <ul class="nav nav-tabs">
+        <li class="active"><a href="#tab11" data-toggle="tab">Picnic</a></li>
+        <li><a href="#tab12" data-toggle="tab">Innogration</a></li>
+        <li><a href="#tab13" data-toggle="tab">Birthday</a></li>        
+      </ul>
+      <div class="tab-content prof-colr">
+        <div class="tab-pane active" id="tab11">    
+          <div class="gal">
+					 	<% for i in 0..10 %>
+			  			<img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+						<% end %>				
+					</div>
+        </div>
+        <div class="tab-pane" id="tab12">
+          <div class="gal">
+					 	<% for i in 0..5 %>
+			  			<%= image_tag("/assets/innog.jpg")%>
+						<% end %>				
+					</div>
+        </div>
+        <div class="tab-pane" id="tab13">
+          <div class="gal">
+					 	<% for i in 0..5 %>			  			
+			  			<%= image_tag("/assets/birth1.jpg")%>
+						<% end %>				
+					</div>
+        </div>
+      </div>
+    </div>
+	</div>
+</div>
