--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -27,25 +27,25 @@
                   <div class="form-group">
                     <label class="col-lg-3">First name:</label>
                     <div class="col-lg-8">
-                      <input class="form-control " value="Jane" type="text">
+                      <input class="form-control " placeholder="First Name" type="text">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-3">Last name:</label>
                     <div class="col-lg-8">
-                      <input class="form-control" value="Bishop" type="text">
+                      <input class="form-control" placeholder="Last Name" type="text">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-3">Company:</label>
                     <div class="col-lg-8">
-                      <input class="form-control" value="" type="text">
+                      <input class="form-control" placeholder="Company" type="text">
                     </div>
                   </div>
                   <div class="form-group">
                     <label class="col-lg-3">Email:</label>
                     <div class="col-lg-8">
-                      <input class="form-control" value="janesemail@gmail.com" type="text">
+                      <input class="form-control" placeholder="Email" type="text">
                     </div>
                   </div>
                   <div class="form-group">
@@ -69,28 +69,28 @@
                   <div class="form-group">
                     <label class="col-md-3">Username:</label>
                     <div class="col-md-8">
-                      <input class="form-control" value="janeuser" type="text">
+                      <input class="form-control" placeholder="Username" type="text">
                     </div>
                   </div>
                   <div class="form-group pass-wd">
                     <label class="col-md-3">Password:</label>
                     <div class="col-md-8">
-                      <input class="form-control" value="11111122333" type="password">
+                      <input class="form-control" placeholder="Password" type="password">
                     </div>
                   </div>
                   <br>
                   <div class="form-group pass-wd">
                     <label class="col-md-3">Confirm password:</label>
                     <div class="col-md-8">
-                      <input class="form-control" value="11111122333" type="password">
+                      <input class="form-control" placeholder="Confirm password" type="password">
                     </div>
                   </div>
                   <div class="form-group" style="margin-top: 10px;">
                     <label class="col-md-3 control-label"></label>
                     <div class="col-md-8">
-                      <input class="btn btn-primary" value="Save Changes" type="button">
+                      <input class="btn btn-primary" placeholder="Submit" type="button">
                       <span></span>
-                      <input class="btn btn-default" value="Cancel" type="reset">
+                      <input class="btn btn-default" placeholder="Cancle" type="reset">
                     </div>
                   </div>
                 </form>
