--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,107 +1,132 @@
 <div class="row" style="background-color: salmon;">
-    <div class="tabbable">
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#tab11" data-toggle="tab">Profile</a></li>
-        <li><a href="#tab12" data-toggle="tab">Celender</a></li>
-        <li><a href="#tab12" data-toggle="tab">Holiday</a></li>
-        <li><a href="#tab12" data-toggle="tab">Leaves</a></li>
-      </ul>
-      <div class="tab-content prof-colr">
-        <div class="tab-pane active" id="tab11">
-          <!-- profile contact -->
-          <div class="container">
-            <h1 class="page-header prof-mar">Edit Profile</h1>
-            <div class="row">
-              <!-- left column -->
-              <div class="col-md-4" style="float: left;padding-left: 32px;">
-                <div class="text-center">
-                  <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar">
-                  <h6>Upload a different photo...</h6>
-                  <input type="file" class="filestyle">
-                </div>
-              </div>
-              <!-- edit form column -->
-              <div class="col-md-8" style="float: right;padding-right: 197px;">      
-                <h3>Personal info</h3>
-                <form class="form-horizontal form-wd" role="form">
-                  <div class="form-group">
-                    <label class="col-lg-3">First name:</label>
-                    <div class="col-lg-8">
-                      <input class="form-control " placeholder="First Name" type="text">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-3">Last name:</label>
-                    <div class="col-lg-8">
-                      <input class="form-control" placeholder="Last Name" type="text">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-3">Company:</label>
-                    <div class="col-lg-8">
-                      <input class="form-control" placeholder="Company" type="text">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-3">Email:</label>
-                    <div class="col-lg-8">
-                      <input class="form-control" placeholder="Email" type="text">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-lg-3">Time Zone:</label>
-                    <div class="col-lg-8">
-                      <div class="ui-select">
-                        <select id="user_time_zone" class="select-wd">
-                          <option value="Hawaii">(GMT-10:00) Hawaii</option>
-                          <option value="Alaska">(GMT-09:00) Alaska</option>
-                          <option value="Pacific Time (US & Canada)">(GMT-08:00) Pacific Time (US & Canada)</option>
-                          <option value="Arizona">(GMT-07:00) Arizona</option>
-                          <option value="Mountain Time (US & Canada)">(GMT-07:00) Mountain Time (US & Canada)</option>
-                          <option value="Central Time (US & Canada)" selected="selected">(GMT-06:00) Central Time (US & Canada)</option>
-                          <option value="Eastern Time (US & Canada)">(GMT-05:00) Eastern Time (US & Canada)</option>
-                          <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <br>
-                  <div class="form-group">
-                    <label class="col-md-3">Username:</label>
-                    <div class="col-md-8">
-                      <input class="form-control" placeholder="Username" type="text">
-                    </div>
-                  </div>
-                  <div class="form-group pass-wd">
-                    <label class="col-md-3">Password:</label>
-                    <div class="col-md-8">
-                      <input class="form-control" placeholder="Password" type="password">
-                    </div>
-                  </div>
-                  <br>
-                  <div class="form-group pass-wd">
-                    <label class="col-md-3">Confirm password:</label>
-                    <div class="col-md-8">
-                      <input class="form-control" placeholder="Confirm password" type="password">
-                    </div>
-                  </div>
-                  <div class="form-group" style="margin-top: 10px;">
-                    <label class="col-md-3 control-label"></label>
-                    <div class="col-md-8">
-                      <input class="btn btn-primary" placeholder="Submit" type="button">
-                      <span></span>
-                      <input class="btn btn-default" placeholder="Cancle" type="reset">
-                    </div>
-                  </div>
-                </form>
+  <div class="tabbable">
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#tab11" data-toggle="tab">Profile</a></li>
+      <li><a href="#tab12" data-toggle="tab">Celender</a></li>
+      <li><a href="#tab12" data-toggle="tab">Holiday</a></li>
+      <li><a href="#tab12" data-toggle="tab">Leaves</a></li>
+    </ul>
+    <div class="tab-content prof-colr">
+      <div class="tab-pane active" id="tab11">
+        <!-- profile contact -->
+        <div class="container">
+          <h1 class="page-header prof-mar">Edit Profile</h1>
+          <div class="row">
+            <!-- left column -->
+            <div class="col-md-4" style="float: left;padding-left: 32px;">
+              <div class="text-center">
+                <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar">
+                <h6>Upload a different photo...</h6>
+                <input type="file" class="filestyle">
               </div>
             </div>
+            <!-- edit form column -->
+            <div class="col-md-8" style="float: right;padding-right: 197px;">      
+              <h3>Personal info</h3>
+              <%= form_for @user, url: user_path, html: { class: "form-horizontal form-wd"} do |f| %>             
+                <div class="form-group">
+                  <label class="col-lg-3">Emp Id: <%= @user.emp_id %></label>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">First name:</label>
+                  <div class="col-lg-8">                   
+                    <%= f.text_field :first_name, placeholder: @user.first_name  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Last name:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :last_name, placeholder: @user.last_name  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Address:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :address, placeholder: @user.address  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">DOB:</label>
+                  <div class="col-lg-8">
+                    <%= f.date_field :dob, placeholder: @user.dob, class: "wd"   %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Qualification:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :qualification, placeholder: @user.qualification  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Department:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :department, placeholder: @user.department,:readonly => true  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Designation:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :designation, placeholder: @user.designation,:readonly => true  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Contact:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :contact, placeholder: @user.contact ,class: "wd" %>
+                  </div>
+                </div>
+                <br>
+                <div class="form-group">
+                  <label class="col-lg-3">Gender:</label>
+                  <div class="col-lg-8">
+                    <div class="ui-select">
+                      <select id="user_time_zone" class="select-wd">
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <br>
+                <div class="form-group">
+                  <label class="col-lg-3">Username(Email):</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :email, placeholder: @user.email  %>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-lg-3">Password:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :password, placeholder: @user.password  %>
+                  </div>
+                </div>               
+                <div class="form-group">
+                  <label class="col-lg-3">Confirm password:</label>
+                  <div class="col-lg-8">
+                    <%= f.text_field :password_confirmation, placeholder: @user.password_confirmation %>
+                  </div>
+                </div>
+                <div class="form-group" style="margin-top: 10px;">
+                  <div class="col-md-12">                    
+                    <%= f.submit 'Save Changes' , class: "btn btn-primary" %>
+                   <span></span>                    
+                  </div>
+                </div>                
+              <!-- </form> -->
+              <% end %>
+            </div>
           </div>
-          <!-- end profile -->
         </div>
-        <div class="tab-pane" id="tab12">
-          <p>Howdy, I'm in Section 2.Morbi vel nibh et arcu pretium adipiscing. Ut vestibulum est eget justo facilisis ullamcorper.  </p>
-        </div>
+        <!-- end profile -->
+      </div>
+      <div class="tab-pane" id="tab12">
+        <p>Howdy, I'm in Section 2.Morbi vel nibh et arcu pretium adipiscing. Ut vestibulum est eget justo facilisis ullamcorper.  </p>
       </div>
     </div>
+  </div>
 </div>
+<style type="text/css">
+  .wd{
+    width: 93%;
+  }
+</style>>
