--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1888,7 +1888,8 @@ i.icon-white {
 .form-wd{width: 150%;}
 .select-wd{width: 100%}
 .pass-wd{width: 95%;}
-.prof-mar{margin-left: 5%;}
+.prof-mar{margin-left: 10%;}
+
 
 /*profile tab*/
 .tabbable{margin-top: 17px;margin-left: 23px;}
@@ -1899,9 +1900,14 @@ i.icon-white {
 }
 .prof-colr{background-color: antiquewhite;}
 .tabbable ul.nav-tabs li.active a:hover{background-color: #545454;}
+.wd{width: 95%;}
+.pro_form{float: right; width: 40%;}
+
 
 /*dashboard layout*/
 .main-container{max-height:100%;min-height: 500px; background-color: antiquewhite;}
+
+
 
  /*faq*/
  .faq{	
@@ -1910,15 +1916,9 @@ i.icon-white {
   background-size: cover;
   height: 600px;
 }
-.font-color{
-  color: white;
-}
-.wdth{
-  width: 100%;
-}
-.rz-none{
-  resize: none;
-}
+.font-color{color: white;}
+.wdth{width: 100%;}
+.rz-none{resize: none;}
 textarea {
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
@@ -1929,6 +1929,8 @@ select {
     -moz-border-radius: 7px;
     border-radius: 7px;
 }
+
+
 /*gallary*/
 	.gal {	
 	-webkit-column-count: 3; /* Chrome, Safari, Opera */
