Complete gallary page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -313,7 +313,7 @@ input[type=text], input[type=submit], textarea {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	color: #333;
+	color: #fff;
 }
 input, button, select, textarea {
 	font-family:'Open Sans', Arial, sans-serif;
@@ -1491,7 +1491,8 @@ i.icon-white {
 	color: #fff;
 }
 .btn:hover {
-	background: #333 !important;
+/*background: #333 !important;*/
+background-color: red;
 }
 .btn:hover,
 .btn:focus,
@@ -1937,7 +1938,7 @@ select {
     -moz-column-count: 3; /* Firefox */
     column-count: 3; 
 	}	
-	.gal img{ width: 100%; padding: 7px 0;}
+	.gal img{ width: 100%; padding: 0px 0; height: 300px;}
 	@media (max-width: 500px) {		
 		.gal {	
 		-webkit-column-count: 1; /* Chrome, Safari, Opera */
@@ -1945,3 +1946,53 @@ select {
 		  column-count: 1;
 	}
 	}
+	.file_align{padding-left: 40%;}
+	/*checkbox select*/
+  .uplod_set{margin: 0 333px 0 333px;  }
+  .image-checkbox {
+    cursor: pointer;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 3px solid transparent;
+    margin-bottom: 0;   
+    outline: 0;
+    height: 300px; 
+  }
+  .image-checkbox input[type="checkbox"] {
+    display: none;
+  }
+
+  .image-checkbox-checked {
+    /*border-color: #4783B0;*/
+    opacity: 0.5;
+    background-color: pink;
+  }
+  .image-checkbox .fa {
+    position: absolute;
+    color: #4A79A3;
+    background-color: #fff;
+    padding: 10px;
+    top: 0;
+    right: 0;
+  }
+  .image-checkbox-checked .fa {
+    display: block !important;
+  }
+  input[type="submit"].btn {
+    width: 151px;    
+    margin-top: 16px;
+    height: 50px;
+    line-height: 28px;
+}
+button.btn {
+	background-color: #c70300;
+    width: 151px; 
+    height: 50px;
+    margin-bottom: 7px;
+    line-height: 28px;
+}
+.btn-primary.delete:hover {
+	background-color: #c70300;
+}
+.btn-primary.upload{ background-color: #1d5a1d;}
