--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
             <li><%= link_to "FAQ", faq_path(current_user)%></li>
           <% end %>
             <li><%= link_to "Contact Us", contact_home_index_path %></li>
-            <li><%= link_to "Celebrations",gallary_home_index_path %></li>
+            <li><%= link_to "Celebrations",gallaries_path %></li>
           <% if user_signed_in? %>
             <li><%= link_to "Sign-out", destroy_user_session_path, method: :DELETE %></li>
           <% else %>
