--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <!-- <p class="notice"><%#= notice %></p>
   <p class="alert"><%#= alert %></p> -->
   <div class="main-container">
+    <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
     <%= yield %>
   </div>
   <%= render 'layouts/footer' %>
