--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
           <% if user_signed_in? %>
             <li><%= link_to "Profile", user_path(current_user) %></li>
             <li><%= link_to "Email", email_path(current_user)%></li>
-            <li><%= link_to "FAQ", faq_path(current_user)%></li>
+            <li><%= link_to "FAQ", faqs_path %></li>
           <% end %>
             <li><%= link_to "Contact Us", contact_home_index_path %></li>
             <li><%= link_to "Celebrations",gallaries_path %></li>
