--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -897,7 +897,7 @@ hr {
   margin: 20px 0;
   border: 0;
   border-top: 1px solid #eeeeee;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px dashed #ffffff;
 }
 
 abbr[title],
