--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,44 +1,84 @@
 <section id="contact" class="section green">
-<div class="container">
-	<h4>Get in Touch</h4>
-	<p>
-		 Reque facer nostro et ius, cu persius mnesarchum disputando eam, clita prompta et mel vidisse phaedrum pri et. Facilisis posidonium ex his. Mutat iudico vis in, mea aeque tamquam scripserit an, mea eu ignota viderer probatus. Lorem legere consetetur ei eum. Sumo aeque assentior te eam, pri nominati posidonium consttuam
-	</p>
-	<div class="blankdivider30">
-	</div>
-	<div class="row">
-		<div class="span12">
-			<div class="cform" id="contact-form">
-				<div id="sendmessage">Your message has been sent. Thank you!</div>
-                <div id="errormessage"></div>
-				<form action="" method="post" role="form" class="contactForm">
-					<div class="row">
-						<div class="span6">
-							<div class="field your-name form-group">
-								<input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                <div class="validation"></div>
+	
+	<div class="container">
+		<div class="row">
+			<div class="span12">
+				<div class="cform" id="contact-form">
+					<div id="sendmessage">Your message has been sent. Thank you!</div>
+	        <div id="errormessage"></div>
+						<div class="row">
+							<div class="span6">
+								<p style="color:#fff;">
+						      <strong><i class="fa fa-map-marker"></i> Address</strong><br>
+						      1216/Mirpur_10 Beach, Dhaka(Bangladesh)
+						  	</p>
+							  <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br>
+							      (+8801)7123456</p>
+							  <p style="color:#fff;">
+							      <strong><i class="fa fa-envelope"></i>  Email Address</strong><br>
+							      Email@info.com</p>
+							  <p></p>
 							</div>
-							<div class="field your-email form-group">
-								<input type="text" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                <div class="validation"></div>
+
+							<div class="span6">	<h3 class="google">Google Map here</h3>
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2647.052756176!2d-89.22536265330541!3d48.43632723975954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d5923d2ab2841bf%3A0xcc7539d0cc2abad2!2s306+Park+Ave%2C+Thunder+Bay%2C+ON+P7B!5e0!3m2!1sen!2sca!4v1424272930785" width="550" height="300" frameborder="0" style="border:0"></iframe>
 							</div>
-							<div class="field subject form-group">
-								<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                <div class="validation"></div>
-							</div>
-						</div>
-						<div class="span6">
-							<div class="field message form-group">
-								<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                                <div class="validation"></div>
-							</div>
-							<input type="submit" value="Send message" class="btn btn-theme pull-left">
-						</div>
-					</div>
-				</form>
+						</div>			
+				</div>
 			</div>
+			<!-- ./span12 -->
 		</div>
-		<!-- ./span12 -->
 	</div>
-</div>
+	<hr>
+	<div class="container">
+		<h4>Get in Touch</h4>
+		<p>
+			 Reque facer nostro et ius, cu persius mnesarchum disputando eam, clita prompta et mel vidisse phaedrum pri et. Facilisis posidonium ex his. Mutat iudico vis in, mea aeque tamquam scripserit an, mea eu ignota viderer probatus. Lorem legere consetetur ei eum. Sumo aeque assentior te eam, pri nominati posidonium consttuam
+		</p>
+		<div class="blankdivider30">
+		</div>
+		<div class="row">
+			<div class="span12">
+				<div class="cform" id="contact-form">
+					<div id="sendmessage">Your message has been sent. Thank you!</div>
+	        <div id="errormessage"></div>		
+					<%= form_for @inquiry, url:home_index_path , method: :post do |f| %>
+						<div class="row">
+							<div class="span6">
+								<div class="field your-name form-group">							
+									<%= f.text_field :inq_name, :placeholder=>"Your Name" %>
+	                <div class="validation"></div>
+								</div>
+
+								<div class="field your-email form-group">							
+									<%= f.text_field :inq_email, :placeholder=>"Please enter a valid email" %>
+	                <div class="validation"></div>
+								</div>
+
+								<div class="field subject form-group">		
+									<%= f.text_field :inq_subject, :placeholder=>"Subject" %>
+	                <div class="validation"></div>
+								</div>
+							</div>
+
+							<div class="span6">
+								<div class="field message form-group">								
+									<%= f.text_area :inq_message, :placeholder=>"Message", class: "form-control rz-none tx", size: "20x6"%>
+	                <div class="validation"></div>
+								</div>
+								<input type="submit" value="Send message" class="btn btn-theme pull-left">
+							</div>
+						</div>
+					<% end %>		
+				</div>
+			</div>
+			<!-- ./span12 -->
+		</div>
+	</div>
 </section>
+<style type="text/css">
+	.tx{
+		background: rgba(227, 231, 228, 1);
+    font-family: 'Open Sans', sans serif;
+	}
+</style>
