--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
   <!-- <p class="notice"><%#= notice %></p>
   <p class="alert"><%#= alert %></p> -->
   <div class="main-container">
-    <% flash.each do |key, value| %>
+    <div>
+      <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
+      <% end %>    
+    </div>
     <%= yield %>
   </div>
   <%= render 'layouts/footer' %>
