--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,35 +1,6 @@
-<section id="contact" class="section green">
-	
-	<div class="container">
-		<div class="row">
-			<div class="span12">
-				<div class="cform" id="contact-form">
-					<div id="sendmessage">Your message has been sent. Thank you!</div>
-	        <div id="errormessage"></div>
-						<div class="row">
-							<div class="span6">
-								<p style="color:#fff;">
-						      <strong><i class="fa fa-map-marker"></i> Address</strong><br>
-						      1216/Mirpur_10 Beach, Dhaka(Bangladesh)
-						  	</p>
-							  <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br>
-							      (+8801)7123456</p>
-							  <p style="color:#fff;">
-							      <strong><i class="fa fa-envelope"></i>  Email Address</strong><br>
-							      Email@info.com</p>
-							  <p></p>
-							</div>
+<script src='https://maps.googleapis.com/maps/api/js?sensor=false'></script>
+<section id="contact" class="section green">	
 
-							<div class="span6">	<h3 class="google">Google Map here</h3>
-									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2647.052756176!2d-89.22536265330541!3d48.43632723975954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d5923d2ab2841bf%3A0xcc7539d0cc2abad2!2s306+Park+Ave%2C+Thunder+Bay%2C+ON+P7B!5e0!3m2!1sen!2sca!4v1424272930785" width="550" height="300" frameborder="0" style="border:0"></iframe>
-							</div>
-						</div>			
-				</div>
-			</div>
-			<!-- ./span12 -->
-		</div>
-	</div>
-	<hr>
 	<div class="container">
 		<h4>Get in Touch</h4>
 		<p>
@@ -75,10 +46,77 @@
 			<!-- ./span12 -->
 		</div>
 	</div>
+	<hr>
+	<div class="container">
+		<div class="row">
+			<div class="span12">
+				<div class="cform" id="contact-form">
+					<div id="sendmessage">Your message has been sent. Thank you!</div>
+	        <div id="errormessage"></div>
+						<div class="row">
+							<div class="span6">
+								<p style="color:#fff;">
+						      <strong><i class="fa fa-map-marker"></i> Address</strong><br>
+						      1216/Mirpur_10 Beach, Dhaka(Bangladesh)
+						  	</p>
+							  <p style="color:#fff;"><strong><i class="fa fa-phone"></i> Phone Number</strong><br>
+							      (+8801)7123456</p>
+							  <p style="color:#fff;">
+							      <strong><i class="fa fa-envelope"></i>  Email Address</strong><br>
+							      Email@info.com</p>
+							  <p></p>
+							</div>
+
+							<div class="span6">	<h3 class="google">Google Map here</h3>
+								<!-- 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2647.052756176!2d-89.22536265330541!3d48.43632723975954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4d5923d2ab2841bf%3A0xcc7539d0cc2abad2!2s306+Park+Ave%2C+Thunder+Bay%2C+ON+P7B!5e0!3m2!1sen!2sca!4v1424272930785" width="550" height="300" frameborder="0" style="border:0"></iframe> -->	
+								<div id="toutMap">
+								  <div class="maps">
+								    <div id="map2" class="map-wrap">
+								    </div>
+								  </div>
+								</div>								
+							</div>
+						</div>			
+				</div>
+			</div>
+			<!-- ./span12 -->
+		</div>
+	</div>
+	<hr>
+	<div class="clearfix"></div>
+<!-- 	<div class="container"> -->
+		<!-- <div class="row">
+		<div style="width: 50%;height: 50%">			
+		  <div id="toutMap"></div>
+		  <div class="maps">
+		    <div id="map2" class="map-wrap">
+		    </div>
+		  </div>
+		 </div> -->
+			<!-- ./span12 -->
+		<!-- </div> -->
+<!-- 	</div> -->
+
 </section>
-<style type="text/css">
-	.tx{
-		background: rgba(227, 231, 228, 1);
-    font-family: 'Open Sans', sans serif;
-	}
-</style>
+<script>
+    function myMap() {
+      var myCenter = new google.maps.LatLng(22.719688, 75.884216);
+      var mapProp= {
+        center: myCenter,
+        zoom:5,
+      };
+      var map=new google.maps.Map(document.getElementById("toutMap"),mapProp);
+      toutMap.style.height = '300px';
+    	toutMap.style.width = '500px';
+      var marker = new google.maps.Marker({position: myCenter});
+      var infowindow = new google.maps.InfoWindow({
+        content: "207, TBC tower, 22/1 South Tukoganj, Manoramaganj, Indore(MP)-452001"
+      });
+
+      marker.setMap(map); 
+
+      infowindow.open(map, marker);
+    }
+    myMap();
+
+  </script>
